--- a/ProjetoPU/src/main/webapp/templates/modeloGeral.xhtml
+++ b/ProjetoPU/src/main/webapp/templates/modeloGeral.xhtml
@@ -16,38 +16,38 @@
 	<title>Loja</title>
 </h:head>
 <h:body>
-
 	<p:growl>
 		<p:autoUpdate />
 	</p:growl>
 	<p:layout fullPage="true">
 		<p:layoutUnit position="north" header="Sistema de Gestão de Vendas"
-			resizable="false" collapsible="false" 
-			style="text-align:center ">
+			resizable="false" collapsible="false" style="text-align:center ">
 		</p:layoutUnit>
-
-		<p:layoutUnit position="south" size="40" style="font-size: 10px; text-align:right ">
-			<img src="#{request.contextPath}/resources/images/prime.webp" width="15" height="15" />
-			<p:link href="https://github.com/MarceloFLopez" style="font-weight: bold;">GITHUB</p:link>
-			<p:outputLabel style="font-weight: bold;" value="| 2022© ~ 2022© " />
+		<p:layoutUnit position="south" size="25"
+			style="font-size: 10px; text-align:right ">
 			<p:outputLabel style="font-weight: bold;"
-				value="By MARCELO ORGANIZATION " />
+				value=" By MARCELO ORGANIZATION© " />
+			<p:outputLabel style="font-weight: bold;" value=" | 2022 ~ 2022 " />
 			<p:outputLabel value="| Building case.001-Beta 01.11.2022" />
 		</p:layoutUnit>
 
-		<p:layoutUnit position="west" size="300" icon="ui-icon-home" header="MENU" sresizable="false" collapsible="true">
+		<p:layoutUnit position="west" size="auto" header="MENU"
+			sresizable="false" collapsible="true">
 
 			<h:form>
 				<p:panelMenu>
 					<p:submenu label="Arquivo">
-						<p:menuitem icon="ui-icon-home" value="Principal" outcome="/templates/modeloGeral.xhtml" />
+						<p:menuitem icon="ui-icon-home" value="Principal"
+							outcome="/templates/modeloGeral.xhtml" />
 						<p:menuitem icon="ui-icon-closethick" value="Sair" />
 					</p:submenu>
-					<p:submenu  label="Cadastros">
+					<p:submenu label="Cadastros">
 						<p:menuitem icon="ui-icon-note" value="Catetorias" />
-						<p:menuitem icon="ui-icon-clipboard" value="Fabricantes" outcome="/pages/fabricantePesquisa.xhtml"/>
-						<p:menuitem icon="ui-icon-plus" value="Produtos" />
-						<p:menuitem icon="ui-icon-person" value="Funcionarios" outcome="/pages/funcionarioPesquisa.xhtml"/>
+						<p:menuitem icon="ui-icon-gear" value="Fabricantes"
+							outcome="/pages/fabricantePesquisa.xhtml" />
+						<p:menuitem icon="ui-icon-clipboard" value="Produtos" />
+						<p:menuitem icon="ui-icon-person" value="Funcionarios"
+							outcome="/pages/funcionarioPesquisa.xhtml" />
 					</p:submenu>
 					<p:submenu label="Vendas">
 						<p:menuitem icon="ui-icon-cart" value="Faturamento" />
