Tela Fabricantes, list, filter

--- a/ProjetoPU/src/main/webapp/templates/modeloGeral.xhtml
+++ b/ProjetoPU/src/main/webapp/templates/modeloGeral.xhtml
@@ -42,12 +42,14 @@
 						<p:menuitem icon="ui-icon-closethick" value="Sair" />
 					</p:submenu>
 					<p:submenu label="Cadastros">
-						<p:menuitem icon="ui-icon-note" value="Catetorias" />
+						<p:menuitem icon="ui-icon-suitcase" value="Catetorias" />
 						<p:menuitem icon="ui-icon-gear" value="Fabricantes"
 							outcome="/pages/fabricantePesquisa.xhtml" />
 						<p:menuitem icon="ui-icon-clipboard" value="Produtos" />
 						<p:menuitem icon="ui-icon-person" value="Funcionarios"
 							outcome="/pages/funcionarioPesquisa.xhtml" />
+						<p:menuitem icon="ui-icon-note" value="Revistas"
+							outcome="/pages/revistaPesquisa.xhtml" />
 					</p:submenu>
 					<p:submenu label="Vendas">
 						<p:menuitem icon="ui-icon-cart" value="Faturamento" />
